--- a/docs/docs/integrations/tools/google_search.ipynb
+++ b/docs/docs/integrations/tools/google_search.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet  langchain-community"
+    "%pip install --upgrade --quiet  langchain_google_community"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.utilities import GoogleSearchAPIWrapper\n",
+    "from langchain_google_community import GoogleSearchAPIWrapper\n",
     "from langchain_core.tools import Tool\n",
     "\n",
     "search = GoogleSearchAPIWrapper()\n",
