--- a/docs/docs/integrations/llm_caching.ipynb
+++ b/docs/docs/integrations/llm_caching.ipynb
@@ -350,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install upstash-semantic-cache\n"
+    "%pip install upstash-semantic-cache"
    ]
   },
   {
@@ -360,8 +360,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from upstash_semantic_cache import SemanticCache\n",
-    "from langchain.globals import set_llm_cache"
+    "from langchain.globals import set_llm_cache\n",
+    "from upstash_semantic_cache import SemanticCache"
    ]
   },
   {
@@ -446,7 +446,7 @@
    ],
    "source": [
     "%%time\n",
-    "llm.invoke( \"Which city has the highest population in the USA?\")"
+    "llm.invoke(\"Which city has the highest population in the USA?\")"
    ]
   },
   {
