Use Initialization in doc and clean up error messaging in script

--- a/docs/docs/integrations/vectorstores/objective.ipynb
+++ b/docs/docs/integrations/vectorstores/objective.ipynb
@@ -56,7 +56,7 @@
    "id": "1bec221c-3bd0-42da-838e-518fa10de6cd",
    "metadata": {},
    "source": [
-    "## Instantiation"
+    "## Initialization"
    ]
   },
   {
