--- a/docs/docs/integrations/vectorstores/objective.ipynb
+++ b/docs/docs/integrations/vectorstores/objective.ipynb
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "status=docsearch.index_status(index_id)\n",
+    "status=vector_store.index_status(index_id)\n",
     "# status returns an object with UPLOADED, READY, ERROR, and PROCESSING document counts\n",
     "if status[\"UPLOADED\"] != status[\"READY\"]:\n",
     "    print(f\"Not all documents processed yet, please retry: {status}\")\n",
