added user agent, fixed notebook formatting

--- a/docs/docs/integrations/vectorstores/objective.ipynb
+++ b/docs/docs/integrations/vectorstores/objective.ipynb
@@ -48,6 +48,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "objective_key = os.getenv(\"OBJECTIVE_KEY\")"
    ]
   },
@@ -67,6 +68,7 @@
    "outputs": [],
    "source": [
     "from langchain_community.vectorstores import Objective\n",
+    "\n",
     "vector_store = Objective(objective_key)"
    ]
   },
@@ -95,24 +97,15 @@
    "source": [
     "from langchain_core.documents import Document\n",
     "\n",
-    "document_1 = Document(\n",
-    "    page_content=\"foo\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
-    ")\n",
+    "document_1 = Document(page_content=\"foo\", metadata={\"source\": \"https://example.com\"})\n",
     "\n",
-    "document_2 = Document(\n",
-    "    page_content=\"bar\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
-    ")\n",
+    "document_2 = Document(page_content=\"bar\", metadata={\"source\": \"https://example.com\"})\n",
     "\n",
-    "document_3 = Document(\n",
-    "    page_content=\"baz\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
-    ")\n",
+    "document_3 = Document(page_content=\"baz\", metadata={\"source\": \"https://example.com\"})\n",
     "\n",
     "documents = [document_1, document_2, document_3]\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=[\"1\",\"2\",\"3\"])"
+    "vector_store.add_documents(documents=documents, ids=[\"1\", \"2\", \"3\"])"
    ]
   },
   {
@@ -131,9 +124,7 @@
    "outputs": [],
    "source": [
     "updated_document = Document(\n",
-    "    id=\"1\",\n",
-    "    page_content=\"qux\",\n",
-    "    metadata={\"source\": \"https://another-example.com\"}\n",
+    "    id=\"1\", page_content=\"qux\", metadata={\"source\": \"https://another-example.com\"}\n",
     ")\n",
     "\n",
     "vector_store.upsert(updated_document)"
@@ -183,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "status=vector_store.index_status(index_id)\n",
+    "status = vector_store.index_status(index_id)\n",
     "# status returns an object with UPLOADED, READY, ERROR, and PROCESSING document counts\n",
     "if status[\"UPLOADED\"] != status[\"READY\"]:\n",
     "    print(f\"Not all documents processed yet, please retry: {status}\")\n",
@@ -238,10 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriever = vector_store.as_retriever(\n",
-    "    search_type=\"mmr\",\n",
-    "    search_kwargs={\"k\": 1}\n",
-    ")\n",
+    "retriever = vector_store.as_retriever(search_type=\"mmr\", search_kwargs={\"k\": 1})\n",
     "retriever.invoke(\"thud\")"
    ]
   },
@@ -272,8 +260,10 @@
     "\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
+    "\n",
     "def format_docs(docs):\n",
     "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
     "\n",
     "rag_chain = (\n",
     "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
