simplify multi prompt example

--- a/docs/docs/versions/migrating_chains/multi_prompt_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/multi_prompt_chain.ipynb
@@ -56,13 +56,7 @@
    "id": "707283ee-fbd8-43e0-9796-343fc2534658",
    "metadata": {},
    "source": [
-    "import { ColumnContainer, Column } from \"@theme/Columns\";\n",
-    "\n",
-    "<ColumnContainer>\n",
-    "\n",
-    "<Column>\n",
-    "\n",
-    "#### Legacy\n"
+    "#### Legacy"
    ]
   },
   {
@@ -114,8 +108,8 @@
     {
      "data": {
       "text/plain": [
-       "{'input': 'What colors are carrots?',\n",
-       " 'text': 'Carrots come in various colors such as orange, red, yellow, purple, and white. The most common color of carrots is orange, but there are also heirloom varieties that come in different colors.'}"
+       "{'input': 'What colors can carrots be?',\n",
+       " 'text': 'Carrots can come in a variety of colors, including orange, purple, red, yellow, white, and even black. The most common color for carrots is orange, but there are actually many different varieties that offer different colors. Each color of carrot may also have slightly different flavors and nutritional profiles.'}"
       ]
      },
      "execution_count": 2,
@@ -132,12 +126,7 @@
    "id": "10ff8cd1-7e47-4133-a793-1ccd61a57f04",
    "metadata": {},
    "source": [
-    "\n",
-    "</Column>\n",
-    "\n",
-    "<Column>\n",
-    "\n",
-    "#### LCEL\n"
+    "#### LCEL"
    ]
   },
   {
@@ -152,7 +141,7 @@
     "\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_core.runnables import RunnableBranch, RunnablePassthrough\n",
+    "from langchain_core.runnables import RunnableLambda, RunnablePassthrough\n",
     "from langchain_openai import ChatOpenAI\n",
     "from typing_extensions import TypedDict\n",
     "\n",
@@ -206,14 +195,14 @@
     "# Finally, assemble the multi-prompt chain. This is a sequence of two steps:\n",
     "# 1) Select \"animal\" or \"vegetable\" via the route_chain, and collect the answer\n",
     "# alongside the input query.\n",
-    "# 2) Use RunnableBranch to route the input query to chain_1 or chain_2, based on the\n",
+    "# 2) Route the input query to chain_1 or chain_2, based on the\n",
     "# selection.\n",
     "chain = {\n",
     "    \"destination\": route_chain,  # \"animal\" or \"vegetable\"\n",
     "    \"input\": RunnablePassthrough(),  # pass through input query\n",
-    "} | RunnableBranch(\n",
-    "    (lambda x: x[\"destination\"] == \"animal\", chain_1),  # if animal, chain_1\n",
-    "    chain_2,  # otherwise, chain_2\n",
+    "} | RunnableLambda(\n",
+    "    # if animal, chain_1. otherwise, chain_2.\n",
+    "    lambda x: chain_1 if x[\"destination\"] == \"animal\" else chain_2,\n",
     ")"
    ]
   },
@@ -226,7 +215,7 @@
     {
      "data": {
       "text/plain": [
-       "'Carrots are typically orange in color, but they can also be found in other colors such as purple, red, yellow, and white, depending on the variety.'"
+       "'Carrots are typically orange in color, but they can also be found in white, yellow, red, and purple varieties. The orange color is due to the presence of beta-carotene, which is a pigment that is also a precursor to Vitamin A.'"
       ]
      },
      "execution_count": 4,
@@ -235,7 +224,7 @@
     }
    ],
    "source": [
-    "chain.invoke({\"input\": \"what color are carrots\"})"
+    "chain.invoke(\"what color are carrots\")"
    ]
   },
   {
@@ -243,10 +232,6 @@
    "id": "e7e46205-9d80-45b8-a3d5-cfbc8ebbe19a",
    "metadata": {},
    "source": [
-    "\n",
-    "</Column>\n",
-    "</ColumnContainer>\n",
-    "\n",
     "## Overview:\n",
     "\n",
     "- Under the hood, `MultiPromptChain` routes the query by instructing the LLM to generate JSON-formatted text, and parses out the intended destination. It takes a registry of string prompt templates as input.\n",
