--- a/docs/docs/integrations/tools/spark_sql.ipynb
+++ b/docs/docs/integrations/tools/spark_sql.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spark SQL\n",
+    "# Spark SQL Toolkit\n",
     "\n",
     "This notebook shows how to use agents to interact with `Spark SQL`. Similar to [SQL Database Agent](/docs/integrations/toolkits/sql_database), it is designed to address general inquiries about `Spark SQL` and facilitate error recovery.\n",
     "\n",
