--- a/docs/docs/integrations/toolkits/playwright.ipynb
+++ b/docs/docs/integrations/toolkits/playwright.ipynb
@@ -247,7 +247,9 @@
     "from langchain.agents import AgentType, initialize_agent\n",
     "from langchain_anthropic import ChatAnthropic\n",
     "\n",
-    "llm = ChatAnthropic(model_name=\"claude-3-haiku-20240307\",temperature=0)  # or any other LLM, e.g., ChatOpenAI(), OpenAI()\n",
+    "llm = ChatAnthropic(\n",
+    "    model_name=\"claude-3-haiku-20240307\", temperature=0\n",
+    ")  # or any other LLM, e.g., ChatOpenAI(), OpenAI()\n",
     "\n",
     "agent_chain = initialize_agent(\n",
     "    tools,\n",
