--- a/docs/docs/versions/migrating_chains/llm_router_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/llm_router_chain.ipynb
@@ -116,13 +116,7 @@
    "id": "5d4dc41c-3fdc-4093-ba5e-31a9ebb54e13",
    "metadata": {},
    "source": [
-    "import { ColumnContainer, Column } from \"@theme/Columns\";\n",
-    "\n",
-    "<ColumnContainer>\n",
-    "\n",
-    "<Column>\n",
-    "\n",
-    "#### Legacy\n"
+    "## Legacy"
    ]
   },
   {
@@ -177,12 +171,7 @@
    "id": "6fd48120-056f-4c58-a04f-da5198c23068",
    "metadata": {},
    "source": [
-    "\n",
-    "</Column>\n",
-    "\n",
-    "<Column>\n",
-    "\n",
-    "#### LCEL\n"
+    "## LCEL"
    ]
   },
   {
@@ -265,16 +254,20 @@
    "id": "baf7ba9e-65b4-48af-8a39-453c01a7b7cb",
    "metadata": {},
    "source": [
-    "\n",
-    "</Column>\n",
-    "</ColumnContainer>\n",
-    "\n",
     "## Next steps\n",
     "\n",
     "See [this tutorial](/docs/tutorials/llm_chain) for more detail on building with prompt templates, LLMs, and output parsers.\n",
     "\n",
     "Check out the [LCEL conceptual docs](/docs/concepts/#langchain-expression-language-lcel) for more background information."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "353e4bab-3b8a-4e89-89e2-200a8d8eb8dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
