--- a/docs/docs/versions/migrating_chains/retrieval_qa.ipynb
+++ b/docs/docs/versions/migrating_chains/retrieval_qa.ipynb
@@ -82,13 +82,7 @@
    "id": "c7e16438",
    "metadata": {},
    "source": [
-    "import { ColumnContainer, Column } from \"@theme/Columns\";\n",
-    "\n",
-    "<ColumnContainer>\n",
-    "\n",
-    "<Column>\n",
-    "\n",
-    "#### Legacy"
+    "## Legacy"
    ]
   },
   {
@@ -128,12 +122,7 @@
    "id": "081948e5",
    "metadata": {},
    "source": [
-    "</Column>\n",
-    "\n",
-    "<Column>\n",
-    "\n",
-    "#### LCEL\n",
-    "\n"
+    "## LCEL"
    ]
   },
   {
@@ -184,9 +173,6 @@
    "id": "d6f44fe8",
    "metadata": {},
    "source": [
-    "</Column>\n",
-    "</ColumnContainer>\n",
-    "\n",
     "The LCEL implementation exposes the internals of what's happening around retrieving, formatting documents, and passing them through a prompt to the LLM, but it is more verbose. You can customize and wrap this composition logic in a helper function, or use the higher-level [`create_retrieval_chain`](https://api.python.langchain.com/en/latest/chains/langchain.chains.retrieval.create_retrieval_chain.html) and [`create_stuff_documents_chain`](https://api.python.langchain.com/en/latest/chains/langchain.chains.combine_documents.stuff.create_stuff_documents_chain.html) helper method:"
    ]
   },
