fix typo in map reduce doc

--- a/docs/docs/versions/migrating_chains/map_reduce_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/map_reduce_chain.ipynb
@@ -234,7 +234,7 @@
     "# summaries, and a final summary.\n",
     "class OverallState(TypedDict):\n",
     "    # Notice here we use the operator.add\n",
-    "    # This is because we want combine all the jokes we generate\n",
+    "    # This is because we want combine all the summaries we generate\n",
     "    # from individual nodes back into one list - this is essentially\n",
     "    # the \"reduce\" part\n",
     "    contents: List[str]\n",
