fix: typo in kwarg name

--- a/docs/docs/integrations/vectorstores/qdrant.ipynb
+++ b/docs/docs/integrations/vectorstores/qdrant.ipynb
@@ -260,7 +260,7 @@
    "outputs": [],
    "source": [
     "qdrant = QdrantVectorStore.from_existing_collection(\n",
-    "    embeddings=embeddings,\n",
+    "    embedding=embeddings,\n",
     "    collection_name=\"my_documents\",\n",
     "    url=\"http://localhost:6333\",\n",
     ")"
