add langgraph install to guides

--- a/docs/docs/versions/migrating_chains/map_reduce_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/map_reduce_chain.ipynb
@@ -190,7 +190,19 @@
    "source": [
     "### LangGraph\n",
     "\n",
-    "Below we show a LangGraph implementation, using the same prompt templates as above. The graph includes a node for generating summaries which is mapped across a list of input documents. This node then flows to a second node that generates the final summary."
+    "Below we show a LangGraph implementation, using the same prompt templates as above. The graph includes a node for generating summaries which is mapped across a list of input documents. This node then flows to a second node that generates the final summary.\n",
+    "\n",
+    "We will need to install `langgraph`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "815f889b-7f19-4702-8e61-8dadcee7c729",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install -qU langgraph"
    ]
   },
   {
