--- a/docs/docs/versions/migrating_chains/map_rerank_docs_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/map_rerank_docs_chain.ipynb
@@ -142,7 +142,19 @@
     "\n",
     "Below we show a LangGraph implementation of this process. Note that our template is simplified, as we delegate the formatting instructions to the chat model's tool-calling features via the [.with_structured_output](/docs/how_to/structured_output/) method.\n",
     "\n",
-    "Here we follow a basic [map-reduce](https://langchain-ai.github.io/langgraph/how-tos/map-reduce/) workflow to execute the LLM calls in parallel."
+    "Here we follow a basic [map-reduce](https://langchain-ai.github.io/langgraph/how-tos/map-reduce/) workflow to execute the LLM calls in parallel.\n",
+    "\n",
+    "We will need to install `langgraph`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8fab4f6-eed1-4662-8d3f-82846a2edfb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install -qU langgraph"
    ]
   },
   {
