--- a/docs/docs/versions/migrating_chains/llm_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/llm_chain.ipynb
@@ -52,7 +52,9 @@
    "id": "e3621b62-a037-42b8-8faa-59575608bb8b",
    "metadata": {},
    "source": [
-    "## Legacy"
+    "## Legacy\n",
+    "\n",
+    "<details>"
    ]
   },
   {
@@ -92,7 +94,11 @@
    "id": "cdc3b527-c09e-4c77-9711-c3cc4506cd95",
    "metadata": {},
    "source": [
-    "## LCEL"
+    "</details>\n",
+    "\n",
+    "## LCEL\n",
+    "\n",
+    "<details>"
    ]
   },
   {
@@ -131,6 +137,8 @@
    "id": "3c0b0513-77b8-4371-a20e-3e487cec7e7f",
    "metadata": {},
    "source": [
+    "</details>\n",
+    "\n",
     "Note that `LLMChain` by default returns a `dict` containing both the input and the output. If this behavior is desired, we can replicate it using another LCEL primitive, [`RunnablePassthrough`](https://api.python.langchain.com/en/latest/runnables/langchain_core.runnables.passthrough.RunnablePassthrough.html):"
    ]
   },
