add collapsible boxes

--- a/docs/docs/versions/migrating_chains/llm_router_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/llm_router_chain.ipynb
@@ -116,7 +116,9 @@
    "id": "5d4dc41c-3fdc-4093-ba5e-31a9ebb54e13",
    "metadata": {},
    "source": [
-    "## Legacy"
+    "## Legacy\n",
+    "\n",
+    "<details open>"
    ]
   },
   {
@@ -171,7 +173,11 @@
    "id": "6fd48120-056f-4c58-a04f-da5198c23068",
    "metadata": {},
    "source": [
-    "## LCEL"
+    "</details>\n",
+    "\n",
+    "## LCEL\n",
+    "\n",
+    "<details open>"
    ]
   },
   {
@@ -254,6 +260,8 @@
    "id": "baf7ba9e-65b4-48af-8a39-453c01a7b7cb",
    "metadata": {},
    "source": [
+    "</details>\n",
+    "\n",
     "## Next steps\n",
     "\n",
     "See [this tutorial](/docs/tutorials/llm_chain) for more detail on building with prompt templates, LLMs, and output parsers.\n",
