--- a/docs/docs/versions/migrating_chains/map_reduce_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/map_reduce_chain.ipynb
@@ -92,6 +92,8 @@
    "source": [
     "### Legacy\n",
     "\n",
+    "<details open>\n",
+    "    \n",
     "Below we show an implementation with `MapReduceDocumentsChain`. We define the prompt templates for the map and reduce steps, instantiate separate chains for these steps, and finally instantiate the `MapReduceDocumentsChain`:"
    ]
   },
@@ -188,9 +190,13 @@
    "id": "b5399533-8662-4fad-b885-e3df3d809c44",
    "metadata": {},
    "source": [
+    "</details>\n",
+    "\n",
     "### LangGraph\n",
     "\n",
     "Below we show a LangGraph implementation, using the same prompt templates as above. The graph includes a node for generating summaries which is mapped across a list of input documents. This node then flows to a second node that generates the final summary.\n",
+    "\n",
+    "<details open>\n",
     "\n",
     "We will need to install `langgraph`:"
    ]
@@ -361,6 +367,8 @@
    "id": "b8027c94-c151-4fa4-8180-088fa52bb042",
    "metadata": {},
    "source": [
+    "</details>\n",
+    "\n",
     "## Summarizing long documents"
    ]
   },
@@ -419,6 +427,7 @@
    "source": [
     "### Legacy\n",
     "\n",
+    "<details open>\n",
     "We can invoke `MapReduceDocumentsChain` as before:"
    ]
   },
@@ -459,8 +468,11 @@
    "id": "4100aedb-0170-45a1-97d5-aa7e9bdb0419",
    "metadata": {},
    "source": [
+    "</details>\n",
+    "\n",
     "### LangGraph\n",
     "\n",
+    "<details open>\n",
     "We can extend our original map-reduce implementation in LangGraph to implement the same recursive collapsing step. We make the following changes:\n",
     "\n",
     "- Add a `collapsed_summaries` key to the state to store the collapsed summaries;\n",
@@ -656,6 +668,8 @@
    "metadata": {},
    "source": [
     "In the corresponding [LangSmith trace](https://smith.langchain.com/public/9d7b1d50-e1d6-44c9-9ab2-eabef621c883/r) we can see the same 17 LLM calls as before, this time grouped under their respective nodes.\n",
+    "\n",
+    "</details>\n",
     "\n",
     "## Next steps\n",
     "\n",
