--- a/docs/docs/versions/migrating_chains/map_rerank_docs_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/map_rerank_docs_chain.ipynb
@@ -55,6 +55,8 @@
    "source": [
     "### Legacy\n",
     "\n",
+    "<details open>\n",
+    "\n",
     "Below we show an implementation with `MapRerankDocumentsChain`. We define the prompt template for a question-answering task and instantiate a [LLMChain](https://api.python.langchain.com/en/latest/chains/langchain.chains.llm.LLMChain.html) object for this purpose. We define how documents are formatted into the prompt and ensure consistency among the keys in the various prompts."
    ]
   },
@@ -138,7 +140,11 @@
    "source": [
     "Inspecting the [LangSmith trace](https://smith.langchain.com/public/7a071bd1-0283-4b90-898c-6e4a2b5a0593/r) for the above run, we can see three LLM calls-- one for each document-- and that the scoring mechanism mitigated against hallucinations.\n",
     "\n",
+    "</details>\n",
+    "\n",
     "### LangGraph\n",
+    "\n",
+    "<details open>\n",
     "\n",
     "Below we show a LangGraph implementation of this process. Note that our template is simplified, as we delegate the formatting instructions to the chat model's tool-calling features via the [.with_structured_output](/docs/how_to/structured_output/) method.\n",
     "\n",
@@ -292,6 +298,8 @@
    "metadata": {},
    "source": [
     "Inspecting the [LangSmith trace](https://smith.langchain.com/public/b64bf9aa-7558-4c1b-be5c-ba8924069039/r) for the above run, we can see three LLM calls as before. Using the model's tool-calling features have also enabled us to remove the parsing step.\n",
+    "\n",
+    "</details>\n",
     "\n",
     "## Next steps\n",
     "\n",
