--- a/docs/docs/versions/migrating_chains/multi_prompt_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/multi_prompt_chain.ipynb
@@ -56,7 +56,9 @@
    "id": "707283ee-fbd8-43e0-9796-343fc2534658",
    "metadata": {},
    "source": [
-    "#### Legacy"
+    "#### Legacy\n",
+    "\n",
+    "<details open>"
    ]
   },
   {
@@ -126,7 +128,11 @@
    "id": "10ff8cd1-7e47-4133-a793-1ccd61a57f04",
    "metadata": {},
    "source": [
-    "#### LCEL"
+    "</details>\n",
+    "\n",
+    "#### LCEL\n",
+    "\n",
+    "<details open>"
    ]
   },
   {
@@ -232,6 +238,8 @@
    "id": "e7e46205-9d80-45b8-a3d5-cfbc8ebbe19a",
    "metadata": {},
    "source": [
+    "</details>\n",
+    "\n",
     "## Overview:\n",
     "\n",
     "- Under the hood, `MultiPromptChain` routes the query by instructing the LLM to generate JSON-formatted text, and parses out the intended destination. It takes a registry of string prompt templates as input.\n",
