--- a/docs/docs/versions/migrating_chains/refine_docs_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/refine_docs_chain.ipynb
@@ -79,6 +79,8 @@
    "source": [
     "### Legacy\n",
     "\n",
+    "<details open>\n",
+    "\n",
     "Below we show an implementation with `RefineDocumentsChain`. We define the prompt templates for the initial summarization and successive refinements, instantiate separate [LLMChain](https://api.python.langchain.com/en/latest/chains/langchain.chains.llm.LLMChain.html) objects for these two purposes, and instantiate `RefineDocumentsChain` with these components."
    ]
   },
@@ -100,7 +102,7 @@
     "    input_variables=[\"page_content\"], template=\"{page_content}\"\n",
     ")\n",
     "document_variable_name = \"context\"\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
     "# The prompt here should take as an input variable the\n",
     "# `document_variable_name`\n",
     "summarize_prompt = ChatPromptTemplate(\n",
@@ -179,7 +181,11 @@
    "id": "8f5caba4-f363-4bcf-8dd4-1d015e27a18d",
    "metadata": {},
    "source": [
+    "</details>\n",
+    "\n",
     "### LCEL\n",
+    "\n",
+    "<details open>\n",
     "\n",
     "Below we show an LCEL implementation of this process:\n",
     "\n",
@@ -206,7 +212,7 @@
     ")\n",
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
     "\n",
     "summarize_prompt = ChatPromptTemplate(\n",
     "    [\n",
@@ -325,6 +331,8 @@
    "id": "5ad2a8f1-e453-4f0b-8911-8c8ddf607f64",
    "metadata": {},
    "source": [
+    "</details>\n",
+    "\n",
     "## Next steps\n",
     "\n",
     "Check out the [LCEL conceptual docs](/docs/concepts/#langchain-expression-language-lcel) for more background information.\n",
