--- a/docs/docs/versions/migrating_chains/stuff_docs_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/stuff_docs_chain.ipynb
@@ -72,6 +72,8 @@
    "source": [
     "### Legacy\n",
     "\n",
+    "<details open>\n",
+    "\n",
     "Below we show an implementation with `StuffDocumentsChain`. We define the prompt template for a summarization task and instantiate a [LLMChain](https://api.python.langchain.com/en/latest/chains/langchain.chains.llm.LLMChain.html) object for this purpose. We define how documents are formatted into the prompt and ensure consistency among the keys in the various prompts."
    ]
   },
@@ -158,7 +160,11 @@
    "id": "b4cb6a5b-37ea-48cc-a096-b948d3ff7e9f",
    "metadata": {},
    "source": [
+    "</details>\n",
+    "\n",
     "### LCEL\n",
+    "\n",
+    "<details open>\n",
     "\n",
     "Below we show an implementation using `create_stuff_documents_chain`:"
    ]
@@ -239,6 +245,8 @@
    "id": "181c5633-38ea-4692-a869-32f4f78398e4",
    "metadata": {},
    "source": [
+    "</details>\n",
+    "\n",
     "## Next steps\n",
     "\n",
     "Check out the [LCEL conceptual docs](/docs/concepts/#langchain-expression-language-lcel) for more background information.\n",
