--- a/docs/docs/versions/migrating_chains/llm_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/llm_chain.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "## Legacy\n",
     "\n",
-    "<details>"
+    "<details open>"
    ]
   },
   {
@@ -98,7 +98,7 @@
     "\n",
     "## LCEL\n",
     "\n",
-    "<details>"
+    "<details open>"
    ]
   },
   {
@@ -137,8 +137,6 @@
    "id": "3c0b0513-77b8-4371-a20e-3e487cec7e7f",
    "metadata": {},
    "source": [
-    "</details>\n",
-    "\n",
     "Note that `LLMChain` by default returns a `dict` containing both the input and the output. If this behavior is desired, we can replicate it using another LCEL primitive, [`RunnablePassthrough`](https://api.python.langchain.com/en/latest/runnables/langchain_core.runnables.passthrough.RunnablePassthrough.html):"
    ]
   },
@@ -173,6 +171,8 @@
    "id": "b2717810",
    "metadata": {},
    "source": [
+    "</details>\n",
+    "\n",
     "## Next steps\n",
     "\n",
     "See [this tutorial](/docs/tutorials/llm_chain) for more detail on building with prompt templates, LLMs, and output parsers.\n",
