--- a/docs/docs/versions/migrating_chains/retrieval_qa.ipynb
+++ b/docs/docs/versions/migrating_chains/retrieval_qa.ipynb
@@ -82,7 +82,9 @@
    "id": "c7e16438",
    "metadata": {},
    "source": [
-    "## Legacy"
+    "## Legacy\n",
+    "\n",
+    "<details open>"
    ]
   },
   {
@@ -122,7 +124,11 @@
    "id": "081948e5",
    "metadata": {},
    "source": [
-    "## LCEL"
+    "</details>\n",
+    "\n",
+    "## LCEL\n",
+    "\n",
+    "<details open>"
    ]
   },
   {
@@ -217,6 +223,8 @@
    "id": "b2717810",
    "metadata": {},
    "source": [
+    "</details>\n",
+    "\n",
     "## Next steps\n",
     "\n",
     "Check out the [LCEL conceptual docs](/docs/concepts/#langchain-expression-language-lcel) for more background information."
