--- a/docs/docs/versions/migrating_chains/llm_router_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/llm_router_chain.ipynb
@@ -132,7 +132,7 @@
     "from langchain_core.prompts import PromptTemplate\n",
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
     "\n",
     "router_prompt = PromptTemplate(\n",
     "    # Note: here we use the prompt template from above. Generally this would need\n",
@@ -195,7 +195,7 @@
     "from langchain_openai import ChatOpenAI\n",
     "from typing_extensions import TypedDict\n",
     "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
     "\n",
     "route_system = \"Route the user's query to either the animal or vegetable expert.\"\n",
     "route_prompt = ChatPromptTemplate.from_messages(\n",
