--- a/docs/docs/versions/migrating_chains/multi_prompt_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/multi_prompt_chain.ipynb
@@ -71,7 +71,7 @@
     "from langchain.chains.router.multi_prompt import MultiPromptChain\n",
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
     "\n",
     "prompt_1_template = \"\"\"\n",
     "You are an expert on animals. Please answer the beloq query:\n",
@@ -110,8 +110,8 @@
     {
      "data": {
       "text/plain": [
-       "{'input': 'What colors can carrots be?',\n",
-       " 'text': 'Carrots can come in a variety of colors, including orange, purple, red, yellow, white, and even black. The most common color for carrots is orange, but there are actually many different varieties that offer different colors. Each color of carrot may also have slightly different flavors and nutritional profiles.'}"
+       "{'input': 'What color are carrots?',\n",
+       " 'text': 'Carrots are most commonly orange, but they can also be found in a variety of other colors, including purple, yellow, red, and white. The color of a carrot is often influenced by its variety and the pigments it contains.'}"
       ]
      },
      "execution_count": 2,
@@ -151,7 +151,7 @@
     "from langchain_openai import ChatOpenAI\n",
     "from typing_extensions import TypedDict\n",
     "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
     "\n",
     "# Define the prompts we will route to\n",
     "prompt_1 = ChatPromptTemplate.from_messages(\n",
@@ -221,7 +221,7 @@
     {
      "data": {
       "text/plain": [
-       "'Carrots are typically orange in color, but they can also be found in white, yellow, red, and purple varieties. The orange color is due to the presence of beta-carotene, which is a pigment that is also a precursor to Vitamin A.'"
+       "'Carrots are most commonly orange, but they can also come in a variety of other colors, including purple, red, yellow, and white. The orange variety is the most popular and widely recognized, but the different colors can have varying flavors and nutritional profiles.'"
       ]
      },
      "execution_count": 4,
