update router chain example

--- a/docs/docs/versions/migrating_chains/llm_router_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/llm_router_chain.ipynb
@@ -152,20 +152,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'input': 'What color are carrots?',\n",
-       " 'destination': 'vegetables',\n",
-       " 'next_inputs': {'input': 'What color are carrots?'}}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vegetables\n"
+     ]
     }
    ],
    "source": [
-    "chain.invoke({\"input\": \"What color are carrots?\"})"
+    "result = chain.invoke({\"input\": \"What color are carrots?\"})\n",
+    "\n",
+    "print(result[\"destination\"])"
    ]
   },
   {
@@ -216,20 +213,7 @@
     "# Instead of writing formatting instructions into the prompt, we\n",
     "# leverage .with_structured_output to coerce the output into a simple\n",
     "# schema.\n",
-    "route_chain = (\n",
-    "    route_prompt  # pass query into above prompt template\n",
-    "    | llm.with_structured_output(RouteQuery)  # generate output matching a schema\n",
-    "    | itemgetter(\"destination\")  # pluck out the \"destination\" parameter of the schema\n",
-    ")\n",
-    "\n",
-    "# Finally, our chain just collects the input\n",
-    "# alongside the output of our route_chain.\n",
-    "# Below, we pass a dict input; RunnablePassthrough.assign\n",
-    "# then adds the destination and next_step keys to this dict.\n",
-    "chain = RunnablePassthrough().assign(\n",
-    "    destination=route_chain,\n",
-    "    next_inputs=RunnablePassthrough(),\n",
-    ")"
+    "chain = route_prompt | llm.with_structured_output(RouteQuery)"
    ]
   },
   {
@@ -239,20 +223,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'input': 'What color are carrots?',\n",
-       " 'destination': 'vegetable',\n",
-       " 'next_inputs': {'input': 'What color are carrots?'}}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vegetable\n"
+     ]
     }
    ],
    "source": [
-    "chain.invoke({\"input\": \"What color are carrots?\"})"
+    "result = chain.invoke({\"input\": \"What color are carrots?\"})\n",
+    "\n",
+    "print(result[\"destination\"])"
    ]
   },
   {
